# twitch-play

./: README.md  play-twitch  publish_pypi.sh  pyproject.toml  requirements.txt
twitch_play/: __main__.py  api.py  auth.py  config.py  player.py  ui.py
