[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "twitch-play"
version = "0.1.2"
description = "A minimal Twitch CLI client. Browse categories and streams with fzf, play with mpv."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [{name = "kasramp"}]
keywords = ["twitch", "mpv", "streamlink", "fzf", "cli", "tui", "streaming", "twitch-client", "terminal"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
    "requests",
    "flask",
    "streamlink",
    "pyfzf",
]

[project.urls]
Homepage = "https://github.com/kasramp/twitch-play"
Repository = "https://github.com/kasramp/twitch-play"
Issues = "https://github.com/kasramp/twitch-play/issues"

[project.scripts]
twitch-play = "twitch_play.__main__:main"
